<?xml version="1.0" encoding="utf-8"?>
<androidx.preference.PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory
        android:key="pc_streamingcommunity_settings"
        android:title="@string/settings_category_streamingcommunity">

        <EditTextPreference
            android:key="provider_streamingcommunity_domain"
            android:title="@string/settings_category_streamingcommunity_domain"
            android:inputType="text"/>

        <!-- Spostato qui -->
        <PreferenceCategory
            android:key="pc_network_settings"
            android:title="@string/settings_category_network_title">
            <ListPreference
                android:key="p_doh_provider_url"
                android:title="@string/settings_doh_provider_title"
                android:summary="%s"
                android:entries="@array/doh_provider_names"
                android:entryValues="@array/doh_provider_urls"
                android:defaultValue="https://cloudflare-dns.com/dns-query" />
        </PreferenceCategory>
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/autoplay_settings">
        <SwitchPreference
                android:key="AUTOPLAY"
            android:title="@string/settings_autoplay"
            android:defaultValue="true"
            android:summaryOn="@string/settings_autoplay_on"
            android:summaryOff="@string/settings_autoplay_off" />
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/miscelaneous_title">
        <Preference
            android:icon="@drawable/ic_settings_about"
            android:key="p_settings_about"
            android:title="@string/settings_about" />

        <Preference
            android:icon="@drawable/ic_settings_help"
            android:key="p_settings_help"
            android:title="@string/settings_help" />
    </PreferenceCategory>

</androidx.preference.PreferenceScreen>
