<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="@layout/activity_main_mobile">

    <item
        android:id="@id/search"
        android:icon="@drawable/ic_menu_search"
        android:title="@string/main_menu_search" />

    <item
        android:id="@id/home"
        android:icon="@drawable/ic_menu_home"
        android:title="@string/main_menu_home" />

    <item
        android:id="@id/movies"
        android:icon="@drawable/ic_menu_movie"
        android:title="@string/main_menu_movies" />

    <item
        android:id="@id/tv_shows"
        android:icon="@drawable/ic_menu_tv"
        android:title="@string/main_menu_tv_shows" />

    <item
        android:id="@id/settings"
        android:icon="@drawable/ic_menu_settings"
        android:title="@string/main_menu_settings" />

</menu>